# alkahest

./: CMakeLists.txt  README.md  cli.cpp  ops_analysis.cpp  registry.cpp  server.cpp  slugify.alk
docs/: architecture.mmd
